--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fantastic-strength",
+   "id": "higher-think",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recent-search",
+   "id": "combined-philadelphia",
    "metadata": {},
    "source": [
     "NASA Mars News"
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "paperback-texas",
+   "id": "japanese-mentor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "variable-elder",
+   "id": "former-chapel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "north-slope",
+   "id": "expressed-drunk",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "adult-active",
+   "id": "coordinated-valuable",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -736,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "reported-projector",
+   "id": "certain-bottom",
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "rocky-dayton",
+   "id": "opposite-token",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "appointed-alexander",
+   "id": "rolled-rugby",
    "metadata": {},
    "source": [
     "JPL Mars Space Images - Featured Image"
@@ -789,8 +789,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "authentic-million",
+   "execution_count": 2,
+   "id": "hairy-cambridge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,17 +801,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "delayed-vegetarian",
+   "execution_count": 3,
+   "id": "productive-passage",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - ====== WebDriver manager ======\n",
-      "[WDM] - Current google-chrome version is 88.0.4324\n",
-      "[WDM] - Get LATEST driver version for 88.0.4324\n"
+      "[WDM] - ====== WebDriver manager ======\n"
      ]
     },
     {
@@ -826,7 +824,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Driver [C:\\Users\\kkirs\\.wdm\\drivers\\chromedriver\\win32\\88.0.4324.96\\chromedriver.exe] found in cache\n"
+      "[WDM] - Current google-chrome version is 88.0.4324\n",
+      "[WDM] - Get LATEST driver version for 88.0.4324\n",
+      "[WDM] - Get LATEST driver version for 88.0.4324\n",
+      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/88.0.4324.96/chromedriver_win32.zip\n",
+      "[WDM] - Driver has been saved in cache [C:\\Users\\kkirs\\.wdm\\drivers\\chromedriver\\win32\\88.0.4324.96]\n"
      ]
     }
    ],
@@ -838,8 +840,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "separate-handbook",
+   "execution_count": 19,
+   "id": "fancy-sponsorship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,8 +852,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "painful-darkness",
+   "execution_count": 20,
+   "id": "orange-sport",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,30 +865,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "arctic-mounting",
+   "execution_count": 27,
+   "id": "separate-format",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.jpl.nasa.gov/images/nasa-astronauts-on-mars-illustration\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'https://d2pn8kiwq2w21t.cloudfront.net/images/jpegPIA24031.original.width-1024.jpg'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Find link to current JPL Featured Space Image\n",
-    "p = soup.find('p')\n",
-    "link = p.find('a')\n",
-    "image_url = link['href']\n",
-    "featured_image_url = base_url + image_url\n",
-    "print(featured_image_url)"
+    "featured_image_url = soup.find('img', class_=\"BaseImage object-contain\")\n",
+    "featured_image_url['data-src']"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "interesting-swing",
+   "id": "afraid-barrier",
    "metadata": {},
    "source": [
     "Mars Facts"
@@ -894,23 +896,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "gothic-fantasy",
+   "execution_count": 28,
+   "id": "engaging-specific",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url = \"https://space-facts.com/mars/\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "thrown-sender",
+   "execution_count": 29,
+   "id": "primary-suffering",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[                      0                              1\n",
+       " 0  Equatorial Diameter:                       6,792 km\n",
+       " 1       Polar Diameter:                       6,752 km\n",
+       " 2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
+       " 3                Moons:            2 (Phobos & Deimos)\n",
+       " 4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
+       " 5         Orbit Period:           687 days (1.9 years)\n",
+       " 6  Surface Temperature:                   -87 to -5 °C\n",
+       " 7         First Record:              2nd millennium BC\n",
+       " 8          Recorded By:           Egyptian astronomers,\n",
+       "   Mars - Earth Comparison             Mars            Earth\n",
+       " 0               Diameter:         6,779 km        12,742 km\n",
+       " 1                   Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       " 2                  Moons:                2                1\n",
+       " 3      Distance from Sun:   227,943,824 km   149,598,262 km\n",
+       " 4         Length of Year:   687 Earth days      365.24 days\n",
+       " 5            Temperature:     -87 to -5 °C      -88 to 58°C,\n",
+       "                       0                              1\n",
+       " 0  Equatorial Diameter:                       6,792 km\n",
+       " 1       Polar Diameter:                       6,752 km\n",
+       " 2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
+       " 3                Moons:            2 (Phobos & Deimos)\n",
+       " 4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
+       " 5         Orbit Period:           687 days (1.9 years)\n",
+       " 6  Surface Temperature:                   -87 to -5 °C\n",
+       " 7         First Record:              2nd millennium BC\n",
+       " 8          Recorded By:           Egyptian astronomers]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Scrape tables\n",
+    "tables = pd.read_html(url)\n",
+    "tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "supreme-major",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(tables)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "seven-event",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Equatorial Diameter:</td>\n",
+       "      <td>6,792 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Polar Diameter:</td>\n",
+       "      <td>6,752 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mass:</td>\n",
+       "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Moons:</td>\n",
+       "      <td>2 (Phobos &amp; Deimos)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Orbit Distance:</td>\n",
+       "      <td>227,943,824 km (1.38 AU)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Orbit Period:</td>\n",
+       "      <td>687 days (1.9 years)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Surface Temperature:</td>\n",
+       "      <td>-87 to -5 °C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>First Record:</td>\n",
+       "      <td>2nd millennium BC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Recorded By:</td>\n",
+       "      <td>Egyptian astronomers</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      0                              1\n",
+       "0  Equatorial Diameter:                       6,792 km\n",
+       "1       Polar Diameter:                       6,752 km\n",
+       "2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
+       "3                Moons:            2 (Phobos & Deimos)\n",
+       "4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
+       "5         Orbit Period:           687 days (1.9 years)\n",
+       "6  Surface Temperature:                   -87 to -5 °C\n",
+       "7         First Record:              2nd millennium BC\n",
+       "8          Recorded By:           Egyptian astronomers"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Select html tables and convert to pandas df\n",
+    "df = tables[0]\n",
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "processed-magic",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>0</th>\\n      <th>1</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>7</th>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>8</th>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Convert pandas df to html string\n",
+    "html_table = df.to_html()\n",
+    "html_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "falling-oracle",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">  <thead>    <tr style=\"text-align: right;\">      <th></th>      <th>0</th>      <th>1</th>    </tr>  </thead>  <tbody>    <tr>      <th>0</th>      <td>Equatorial Diameter:</td>      <td>6,792 km</td>    </tr>    <tr>      <th>1</th>      <td>Polar Diameter:</td>      <td>6,752 km</td>    </tr>    <tr>      <th>2</th>      <td>Mass:</td>      <td>6.39 × 10^23 kg (0.11 Earths)</td>    </tr>    <tr>      <th>3</th>      <td>Moons:</td>      <td>2 (Phobos &amp; Deimos)</td>    </tr>    <tr>      <th>4</th>      <td>Orbit Distance:</td>      <td>227,943,824 km (1.38 AU)</td>    </tr>    <tr>      <th>5</th>      <td>Orbit Period:</td>      <td>687 days (1.9 years)</td>    </tr>    <tr>      <th>6</th>      <td>Surface Temperature:</td>      <td>-87 to -5 °C</td>    </tr>    <tr>      <th>7</th>      <td>First Record:</td>      <td>2nd millennium BC</td>    </tr>    <tr>      <th>8</th>      <td>Recorded By:</td>      <td>Egyptian astronomers</td>    </tr>  </tbody></table>'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Strip unwanted newlines to clean up table\n",
+    "html_table.replace('\\n', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "architectural-paste",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Save table to html file\n",
+    "df.to_html('mars_facts_table.html')"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "civil-niagara",
+   "id": "heard-grace",
    "metadata": {},
    "source": [
     "Mars Hemispheres"
@@ -919,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mathematical-egypt",
+   "id": "vital-highlight",
    "metadata": {},
    "outputs": [],
    "source": []
