finished mission_to_mars code

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "higher-think",
+   "execution_count": 45,
+   "id": "retired-professional",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "import requests\n",
     "from requests import get\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import time"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "combined-philadelphia",
+   "id": "sorted-continuity",
    "metadata": {},
    "source": [
     "NASA Mars News"
@@ -26,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "japanese-mentor",
+   "id": "assumed-protocol",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "former-chapel",
+   "id": "electrical-berry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "expressed-drunk",
+   "id": "prerequisite-official",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "coordinated-valuable",
+   "id": "grateful-hearts",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -736,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "certain-bottom",
+   "id": "middle-damage",
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "opposite-token",
+   "id": "ordinary-trading",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rolled-rugby",
+   "id": "treated-anthony",
    "metadata": {},
    "source": [
     "JPL Mars Space Images - Featured Image"
@@ -789,8 +790,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "hairy-cambridge",
+   "execution_count": 9,
+   "id": "subsequent-savings",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,15 +802,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "productive-passage",
+   "execution_count": 10,
+   "id": "functional-reception",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - ====== WebDriver manager ======\n"
+      "[WDM] - ====== WebDriver manager ======\n",
+      "[WDM] - Current google-chrome version is 88.0.4324\n",
+      "[WDM] - Get LATEST driver version for 88.0.4324\n"
      ]
     },
     {
@@ -824,11 +827,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Current google-chrome version is 88.0.4324\n",
-      "[WDM] - Get LATEST driver version for 88.0.4324\n",
-      "[WDM] - Get LATEST driver version for 88.0.4324\n",
-      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/88.0.4324.96/chromedriver_win32.zip\n",
-      "[WDM] - Driver has been saved in cache [C:\\Users\\kkirs\\.wdm\\drivers\\chromedriver\\win32\\88.0.4324.96]\n"
+      "[WDM] - Driver [C:\\Users\\kkirs\\.wdm\\drivers\\chromedriver\\win32\\88.0.4324.96\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -841,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fancy-sponsorship",
+   "id": "sustainable-trouble",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "orange-sport",
+   "id": "agricultural-profit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "separate-format",
+   "id": "enhanced-witness",
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afraid-barrier",
+   "id": "clinical-leader",
    "metadata": {},
    "source": [
     "Mars Facts"
@@ -897,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "engaging-specific",
+   "id": "indian-frederick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "primary-suffering",
+   "id": "recreational-milan",
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "supreme-major",
+   "id": "gentle-colonial",
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "seven-event",
+   "id": "painted-alexander",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "processed-magic",
+   "id": "elegant-simulation",
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "falling-oracle",
+   "id": "patent-evans",
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "architectural-paste",
+   "id": "binding-award",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "heard-grace",
+   "id": "reduced-education",
    "metadata": {},
    "source": [
     "Mars Hemispheres"
@@ -1145,8 +1144,187 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "julian-dakota",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Dependencies Splinter\n",
+    "from splinter import Browser\n",
+    "from webdriver_manager.chrome import ChromeDriverManager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "homeless-separate",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - ====== WebDriver manager ======\n",
+      "[WDM] - Current google-chrome version is 88.0.4324\n",
+      "[WDM] - Get LATEST driver version for 88.0.4324\n",
+      "[WDM] - Driver [C:\\Users\\kkirs\\.wdm\\drivers\\chromedriver\\win32\\88.0.4324.96\\chromedriver.exe] found in cache\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Set up splinter\n",
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "mechanical-pride",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#URLs and connect to browser\n",
+    "usgs_url = \"https://astrogeology.usgs.gov\"\n",
+    "hemi_url = \"https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\"\n",
+    "\n",
+    "browser.visit(hemi_url)\n",
+    "time.sleep(2)\n",
+    "\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html,'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "civilian-christianity",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create a dictionary to hold hemisphere name and url data\n",
+    "hemi_img_dict = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "maritime-consciousness",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Retrieve parent tags for each hemisphere\n",
+    "hemi_items = soup.find_all('div', class_=\"item\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "instructional-humor",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Loop through each item in hemi_items[]\n",
+    "for hemisphere in range(len(hemi_items)):\n",
+    "    #Use splinter to click on each hemisphere's link and retrieve data\n",
+    "    hemi_link = browser.find_by_css(\"a.product-item h3\")\n",
+    "    hemi_link[hemisphere].click()\n",
+    "    time.sleep(1)\n",
+    "    \n",
+    "    #Connect to browser\n",
+    "    img_html = browser.html\n",
+    "    img_url = BeautifulSoup(img_html, 'html.parser')\n",
+    "    \n",
+    "    #Find image urls and combine with base url\n",
+    "    hemi_url = img_url.find('img', class_=\"wide-image\")['src']\n",
+    "    hemi_img_url = usgs_url + hemi_url\n",
+    "    \n",
+    "    #Find hemisphere names\n",
+    "    hemi_name = browser.find_by_css('.title').text\n",
+    "    \n",
+    "    #Append dictionary with results\n",
+    "    hemi_img_dict.append({\"title\": hemi_name, \"img_url\": hemi_img_url})\n",
+    "    \n",
+    "    #Go back to main page\n",
+    "    browser.back()\n",
+    "    \n",
+    "#Quit browser session\n",
+    "browser.quit()\n",
+    "\n",
+    "#View dictionary\n",
+    "hemi_img_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "vital-highlight",
+   "id": "surprised-lingerie",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "endless-stockholm",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "liberal-raising",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "complete-basics",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "palestinian-edwards",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "composed-quilt",
    "metadata": {},
    "outputs": [],
    "source": []
