--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "engaged-mattress",
+   "execution_count": 4,
+   "id": "musical-consistency",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import time\n",
+    "import pymongo\n",
     "#Dependencies Splinter\n",
     "from splinter import Browser\n",
     "from webdriver_manager.chrome import ChromeDriverManager"
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "filled-surfing",
+   "id": "documentary-audio",
    "metadata": {},
    "source": [
     "NASA Mars News"
@@ -29,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "assisted-transparency",
+   "execution_count": 59,
+   "id": "allied-october",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "incident-lawsuit",
+   "execution_count": 60,
+   "id": "matched-census",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "pursuant-injury",
+   "execution_count": 61,
+   "id": "particular-floating",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -80,7 +81,7 @@
       "  <link color=\"#e48b55\" href=\"/safari-pinned-tab.svg\" rel=\"mask-icon\"/>\n",
       "  <meta content=\"#000000\" name=\"theme-color\"/>\n",
       "  <meta content=\"authenticity_token\" name=\"csrf-param\">\n",
-      "   <meta content=\"B+cVrKwZrGt0VbY9KJD8Dfv2LbzDYFuC/qiacgMGjA4JNMEa/0B6rqtKBb8WvqM+oOJfBeVmfJ/R+xjnJoiB8w==\" name=\"csrf-token\">\n",
+      "   <meta content=\"xK357LwOLksDJ6Z9be8FxpkwaVIW5DVXL7rvlld02wY7cjQJLZJC40S35/iWyFvuKq/Ypb1wVk6ZqqAw3IT/Og==\" name=\"csrf-token\">\n",
       "    <title>\n",
       "     News  – NASA’s Mars Exploration Program\n",
       "    </title>\n",
@@ -729,8 +730,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "furnished-canyon",
+   "execution_count": 62,
+   "id": "difficult-values",
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +740,7 @@
        "\"NASA's Mars Perseverance Rover Provides Front-Row Seat to Landing, First Audio Recording of Red Planet\""
       ]
      },
-     "execution_count": 78,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,8 +753,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "scenic-community",
+   "execution_count": 63,
+   "id": "apart-pilot",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +763,7 @@
        "'The agency’s newest rover captured first-of-its kind footage of its Feb. 18 touchdown and has recorded audio of Martian wind.'"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "muslim-worth",
+   "id": "miniature-poland",
    "metadata": {},
    "source": [
     "JPL Mars Space Images - Featured Image"
@@ -783,15 +784,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "missing-graphics",
+   "execution_count": 64,
+   "id": "hidden-thumbnail",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - ====== WebDriver manager ======\n"
+      "[WDM] - ====== WebDriver manager ======\n",
+      "[WDM] - Current google-chrome version is 88.0.4324\n",
+      "[WDM] - Get LATEST driver version for 88.0.4324\n"
      ]
     },
     {
@@ -806,8 +809,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Current google-chrome version is 88.0.4324\n",
-      "[WDM] - Get LATEST driver version for 88.0.4324\n",
       "[WDM] - Driver [C:\\Users\\kkirs\\.wdm\\drivers\\chromedriver\\win32\\88.0.4324.96\\chromedriver.exe] found in cache\n"
      ]
     }
@@ -820,8 +821,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "popular-grill",
+   "execution_count": 65,
+   "id": "dietary-booking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,8 +833,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "amended-analysis",
+   "execution_count": 66,
+   "id": "chemical-seven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,8 +846,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "equal-average",
+   "execution_count": 67,
+   "id": "powerful-tablet",
    "metadata": {},
    "outputs": [
     {
@@ -855,20 +856,20 @@
        "'https://d2pn8kiwq2w21t.cloudfront.net/images/jpegPIA24031.original.width-1024.jpg'"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Find link to current JPL Featured Space Image\n",
-    "featured_image_url = soup.find('img', class_=\"BaseImage object-contain\")['data-src']\n",
-    "featured_image_url"
+    "featured_img_url = soup.find('img', class_=\"BaseImage object-contain\")['data-src']\n",
+    "featured_img_url"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "minimal-parallel",
+   "id": "understood-dylan",
    "metadata": {},
    "source": [
     "Mars Facts"
@@ -876,8 +877,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "suitable-practitioner",
+   "execution_count": 68,
+   "id": "lesbian-values",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,8 +887,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "modified-samuel",
+   "execution_count": 69,
+   "id": "processed-carroll",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +923,7 @@
        " 8          Recorded By:           Egyptian astronomers]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,8 +936,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "accessory-stationery",
+   "execution_count": 70,
+   "id": "southern-excuse",
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1028,7 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,8 +1041,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "going-graph",
+   "execution_count": 71,
+   "id": "transparent-cancellation",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1051,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>0</th>\\n      <th>1</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>7</th>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>8</th>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,8 +1064,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "regulation-hawaiian",
+   "execution_count": 72,
+   "id": "geological-lotus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1075,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "inappropriate-filing",
+   "id": "alternate-announcement",
    "metadata": {},
    "source": [
     "Mars Hemispheres"
@@ -1082,8 +1083,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "severe-salmon",
+   "execution_count": 8,
+   "id": "integral-logic",
    "metadata": {},
    "outputs": [
     {
@@ -1092,8 +1093,7 @@
      "text": [
       "[WDM] - ====== WebDriver manager ======\n",
       "[WDM] - Current google-chrome version is 88.0.4324\n",
-      "[WDM] - Get LATEST driver version for 88.0.4324\n",
-      "[WDM] - Driver [C:\\Users\\kkirs\\.wdm\\drivers\\chromedriver\\win32\\88.0.4324.96\\chromedriver.exe] found in cache\n"
+      "[WDM] - Get LATEST driver version for 88.0.4324\n"
      ]
     },
     {
@@ -1102,6 +1102,13 @@
      "text": [
       "\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Driver [C:\\Users\\kkirs\\.wdm\\drivers\\chromedriver\\win32\\88.0.4324.96\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -1113,8 +1120,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "widespread-small",
+   "execution_count": 74,
+   "id": "continental-there",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1131,19 +1138,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "searching-extension",
+   "execution_count": 75,
+   "id": "comfortable-arkansas",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create a dictionary to hold hemisphere name and url data\n",
-    "hemi_img_dict = []"
+    "hemisphere_image_urls = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "determined-circulation",
+   "execution_count": 76,
+   "id": "august-transfer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,8 +1160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "banned-pixel",
+   "execution_count": 77,
+   "id": "established-tucson",
    "metadata": {},
    "outputs": [
     {
@@ -1170,14 +1177,15 @@
        "  'img_url': 'https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Loop through each item in hemi_items[]\n",
-    "for hemisphere in range(len(hemi_items)):\n",
+    "for item in range(len(hemi_items)):\n",
+    "    hemisphere = \n",
     "    #Use splinter to click on each hemisphere's link and retrieve data\n",
     "    hemi_link = browser.find_by_css(\"a.product-item h3\")\n",
     "    hemi_link[hemisphere].click()\n",
@@ -1209,28 +1217,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "altered-shannon",
+   "execution_count": 79,
+   "id": "retired-claim",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {\"Latest_Header\": news_title, \"Latest_Description\": news_p, \"Featured Mars Image\":featured_image_url, \"Mars Facts\": html_table, \"Mars Hemispheres\": hemi_img_dict}"
+    "data = {\"news_title\": news_title, \"news_p\": news_p, \"featured_img_url\":featured_img_url, \"html_table\": html_table, \"hemi_img_dict\": hemi_img_dict}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "charitable-utility",
+   "execution_count": 80,
+   "id": "ideal-culture",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Latest_Header': \"NASA's Mars Perseverance Rover Provides Front-Row Seat to Landing, First Audio Recording of Red Planet\",\n",
-       " 'Latest_Description': 'The agency’s newest rover captured first-of-its kind footage of its Feb. 18 touchdown and has recorded audio of Martian wind.',\n",
-       " 'Featured Mars Image': 'https://d2pn8kiwq2w21t.cloudfront.net/images/jpegPIA24031.original.width-1024.jpg',\n",
-       " 'Mars Facts': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>0</th>\\n      <th>1</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>7</th>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>8</th>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>',\n",
-       " 'Mars Hemispheres': [{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "{'news_title': \"NASA's Mars Perseverance Rover Provides Front-Row Seat to Landing, First Audio Recording of Red Planet\",\n",
+       " 'news_p': 'The agency’s newest rover captured first-of-its kind footage of its Feb. 18 touchdown and has recorded audio of Martian wind.',\n",
+       " 'featured_img_url': 'https://d2pn8kiwq2w21t.cloudfront.net/images/jpegPIA24031.original.width-1024.jpg',\n",
+       " 'html_table': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>0</th>\\n      <th>1</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>7</th>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>8</th>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>',\n",
+       " 'hemi_img_dict': [{'title': 'Cerberus Hemisphere Enhanced',\n",
        "   'img_url': 'https://astrogeology.usgs.gov/cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
        "  {'title': 'Schiaparelli Hemisphere Enhanced',\n",
        "   'img_url': 'https://astrogeology.usgs.gov/cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
@@ -1240,7 +1248,7 @@
        "   'img_url': 'https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]}"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tropical-biography",
+   "id": "cultural-cycle",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1260,23 +1268,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amended-spray",
+   "id": "suspended-mountain",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "demographic-neutral",
+   "execution_count": 81,
+   "id": "historical-cleaner",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "id": "banner-interval",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = 'mongodb://localhost:27017'\n",
+    "client = pymongo.MongoClient(conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "alert-franklin",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = client.mars\n",
+    "mars_data = db.mars_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "hazardous-lecture",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x232e9364e40>"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mars_data.insert_one(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "numerical-johns",
+   "id": "popular-oliver",
    "metadata": {},
    "outputs": [],
    "source": []
